--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/user-event": "^12.1.10",
     "ag-grid-community": "^25.2.1",
     "ag-grid-react": "^25.2.0",
+    "axios": "^0.21.1",
     "immer": "^9.0.2",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
