--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-scripts": "4.0.0",
     "redux": "^4.1.0",
     "redux-devtools-extension": "^2.13.9",
+    "redux-saga": "^1.1.3",
     "styled-components": "^5.2.3",
     "use-react-router": "^1.0.7",
     "web-vitals": "^0.2.4"
